[package]
name = "expiring-bloom-rs"
version = "0.1.0"
edition = "2021"
authors = ["oiwn"]
description = "A time-decaying Bloom filter implementation with multiple storage backends"
repository = "https://github.com/oiwn/expiring-bloom-rs"
documentation = "https://docs.rs/expiring-bloom-rs"
homepage = "https://github.com/yourusername/expiring-bloom-rs"
license = "MIT"
readme = "README.md"
keywords = ["bloom-filter", "probabilistic", "time-decay", "cache", "rate-limiting"]
categories = ["algorithms", "caching", "data-structures"]

[dependencies]
bincode = "1"
bitvec = "1"
fnv = "1"
murmur3 = "0.5"
thiserror = "2"
redb = { version = "2", optional = true }
derive_builder = "0.20"

# server
dotenvy = { version = "0.15", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
utoipa = { version = "5.3", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8.1", features = ["axum"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[dev-dependencies]
rand = "0.8"
expiring-bloom-rs = { path = ".", features = ["redb", "server"] }
criterion = { version = "0.5", features = ["html_reports"] }
tower = "0.5.2"

[[bin]]
name = "bloom-server"
path = "src/bin/server.rs"
required-features = ["server", "redb"]

[package.metadata.docs.rs]
no-default-features = true
features = ["redb"]

[features]
default = ["redb", "server"]
redb = ["dep:redb"]
server = ["dep:axum", "dep:tokio", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:serde", "dep:serde_json", "dep:dotenvy", "dep:redb"]

[[bench]]
name = "bloom_benchmarks"
harness = false
